--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 
 body {
   height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -208,5 +209,30 @@ button span:after {
   right: -6px;
   width: 40px;
   background-color: #626262;
+}
+
+footer {
+  width: 90%;
+  position: absolute;
+  bottom: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer a {
+  margin: 0;
+  padding: 0 1em;
+  background-color: transparent;
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
