--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@ body {
 }
 body {
   height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,4 +165,20 @@ button span:after {
   right: -6px;
   width: 40px;
   background-color: lighten($color: #2f2f2f, $amount: 20);
+}
+
+footer {
+  width: 90%;
+  position: absolute;
+  bottom: 0;
+  transform: translateY(-100%);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  a {
+    margin: 0;
+    padding: 0 1em;
+    background-color: transparent;
+    text-decoration: underline;
+  }
 }
